--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "typescript": "^5.3.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "node-pg-migrate": "^6.2.2",
+
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "@types/pg": "^8.11.2",
     "@types/uuid": "^9.0.8",
-    "node-pg-migrate": "^6.2.2",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
   }
