--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/index.ts",
     "migrate": "node-pg-migrate",
-  "migrate-up": "if [ \"$NODE_ENV\" = \"production\" ]; then export DATABASE_URL=$DATABASE_URL; else export DATABASE_URL=$DEVELOPMENT_DATABASE_URL; fi; npm run migrate up"
+    "migrate-up": "DATABASE_URL=postgres://uqxpwmyslykhug:011b62dfd99651dafb3be5a69e82a9dd17d1b2163cb25c67dba9fd6b3d7b87c7@ec2-52-21-61-131.compute-1.amazonaws.com:5432/ddghvustlvdqjv npm run migrate up"
   },
   "keywords": [],
   "author": "",
@@ -27,7 +27,7 @@
     "pg": "^8.11.3",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1",
-    "node-pg-migrate": "^6.2.2",
+    
 
   },
   "devDependencies": {
@@ -37,5 +37,6 @@
     "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
+    "node-pg-migrate": "^6.2.2",
   }
 }
