--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@types/pg": "^8.11.2",
     "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
     "node-pg-migrate": "^6.2.2",
   }
 }
