--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "node-pg-migrate": "^6.2.2",
+    "node-pg-migrate": "^6.2.2"
   }
 }
