--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "typescript": "^5.3.3",
-    "uuid": "^9.0.1",
+    "uuid": "^9.0.1"
     
 
   },
