--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "typescript": "^5.3.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "node-pg-migrate": "^6.2.2"
     
 
   },
@@ -36,7 +37,6 @@
     "@types/pg": "^8.11.2",
     "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "node-pg-migrate": "^6.2.2"
+    "ts-node": "^10.9.2"
   }
 }
