--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/index.ts",
     "migrate": "node-pg-migrate",
-    "migrate-up": "DATABASE_URL=postgres://uqxpwmyslykhug:011b62dfd99651dafb3be5a69e82a9dd17d1b2163cb25c67dba9fd6b3d7b87c7@ec2-52-21-61-131.compute-1.amazonaws.com:5432/ddghvustlvdqjv npm run migrate up"
+    "migrate-up": "if [ \"$NODE_ENV\" = \"production\" ]; then export DATABASE_URL=$DATABASE_URL; else export DATABASE_URL=$DEVELOPMENT_DATABASE_URL; fi; npm run migrate up"
+
   },
   "keywords": [],
   "author": "",
