--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/index.ts",
     "migrate": "node-pg-migrate",
-    "migrate-up": "if [ \"$NODE_ENV\" = \"production\" ]; then export DATABASE_URL=$DATABASE_URL; else export DATABASE_URL=$DEVELOPMENT_DATABASE_URL; fi; npm run migrate up"
+    "migrate-up": "if [ \"$NODE_ENV\" = \"production\" ]; then export DATABASE_URL=\"$DATABASE_URL?sslmode=require\"; npm run migrate up; else npm run migrate up; fi"
   },
   "keywords": [],
   "author": "",
