--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/index.ts",
     "migrate": "node-pg-migrate",
-    "migrate-up": "node-pg-migrate up"
+    "migrate-up": "node-pg-migrate up",
+    "migrate-create": "node-pg-migrate create"
   },
   "keywords": [],
   "author": "",
