--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "migrate": "node-pg-migrate",
     "migrate-up": "node-pg-migrate up",
-    "migrate-create": "node-pg-migrate create"
+    "migrate-create": "node-pg-migrate create",
+    "postdeploy": "npm run migrate-up"
+
   },
   "keywords": [],
   "author": "",
