--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "migrate-up": "node-pg-migrate up",
     "migrate-create": "node-pg-migrate create",
     "postdeploy": "npm run migrate-up"
-
   },
   "keywords": [],
   "author": "",
@@ -27,12 +26,10 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
     "typescript": "^5.3.3",
-    "uuid": "^9.0.1",
-    "node-pg-migrate": "^6.2.2"
-    
-
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
