--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ JWT_EXPIRES_IN = 5h
 
 JWT_SECRET_KEY_FEEDBACK = skdfhk34loolouFGsghgfgh4667
 UPLOAD_PATH = ../../uploads
+
+reCAPTCHA_SECRET_KEY = 6Lf6ndgpAAAAABG0QWrR9KZRymcm3viFz1onKO88
